--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.4.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
 
 	</dependencies>
 
