--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.44</version>
+		</dependency>
 	</dependencies>
 
 	<build>
